# mini_rover

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ros_industrial_ci.yml
launch/: minirover_launch.py
mini_rover/: minimal_publisher.py  minimal_subscriber.py  minirover_twist_publisher.py  minirover_twist_publisher_middleman.py  name_publisher.py  name_subscriber.py  subscriber_member_function.py
test/: test_tank_drive.py
